[gd_scene load_steps=2 format=3 uid="uid://tdwswcrnkfy7"]

[ext_resource type="Script" path="res://script/dead_timer_script.gd" id="1_y023h"]

[node name="DeadTimer" type="Node2D"]
script = ExtResource("1_y023h")

[node name="CoinPlayer1" type="Timer" parent="."]

[node name="CoinPlayer2" type="Timer" parent="."]

[node name="CoinPlayer3" type="Timer" parent="."]

[node name="CoinPlayer4" type="Timer" parent="."]
process_callback = 0

[node name="Button" type="Button" parent="."]
offset_right = 149.0
offset_bottom = 44.0
text = "press"

[connection signal="ready" from="CoinPlayer1" to="." method="_on_coin_player_1_ready"]
[connection signal="timeout" from="CoinPlayer1" to="." method="_on_coin_player_1_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
